# Helloworld

./: CMakeLists.txt  CMakePresets.json  Helloworld.cpp  Helloworld.h  vcpkg.json
Tests/: connectivityTest.cpp  connectivityTest.h
